Paths, Round, and text colors

--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -18,7 +18,7 @@ const dateData = new Date(date);
 
 <a
   href={blogUrl}
-  class="max-w-sm shadow-md flex flex-col group rounded-xl overflow-hidden"
+  class="max-w-sm shadow-md flex flex-col group  overflow-hidden"
 >
   <div class="h-96 overflow-hidden shrink-0 relative">
     <Image
