--- a/src/components/PlaneCard.astro
+++ b/src/components/PlaneCard.astro
@@ -19,7 +19,7 @@ if (!images[planeData.headerImage]) {
 
 <a
   href={`${urlPrefix}${planeData.slug}`}
-  class="flex flex-col group relative overflow-hidden rounded-xl text-white"
+  class="flex flex-col group relative overflow-hidden  text-white"
   id={planeData.name}
 >
   <Image
