--- a/src/components/TeamMemberCard.astro
+++ b/src/components/TeamMemberCard.astro
@@ -16,10 +16,10 @@ if (!images[imagePath])
   <Image
     src={images[imagePath]()}
     alt={name}
-    class="w-full min-h-[28rem] object-cover rounded-xl"
+    class="w-full min-h-[28rem] object-cover "
   />
   <div
-    class="flex flex-col shadow-lg bg-white w-10/12 py-8 px-8 -top-20 gap-3 relative h-full rounded-xl"
+    class="flex flex-col shadow-lg bg-white w-10/12 py-8 px-8 -top-20 gap-3 relative h-full "
   >
     <h2 class="text-2xl font-semibold leading-tight text-dark-blue">
       {name}
