--- a/src/pages/en/about/campus.astro
+++ b/src/pages/en/about/campus.astro
@@ -41,10 +41,10 @@ const data = {
         <Image
           src={students}
           alt="Estudiante en iFly"
-          class="rounded-xl z-10 relative"
+          class=" z-10 relative"
         />
         <div
-          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
@@ -71,15 +71,15 @@ const data = {
         <Image
           src={tecnico1}
           alt="iFly technician"
-          class="rounded-xl z-10 lg:absolute max-h-72 lg:max-h-none lg:w-80 aspect-square object-cover top-0 left-0"
+          class=" z-10 lg:absolute max-h-72 lg:max-h-none lg:w-80 aspect-square object-cover top-0 left-0"
         />
         <Image
           src={tecnico2}
           alt="iFly technician"
-          class="rounded-xl mt-10 lg:mt-0 z-10 lg:absolute max-h-72 lg:max-h-none lg:w-80 aspect-square object-cover bottom-0 right-0"
+          class=" mt-10 lg:mt-0 z-10 lg:absolute max-h-72 lg:max-h-none lg:w-80 aspect-square object-cover bottom-0 right-0"
         />
         <div
-          class="hidden lg:block lg:absolute inset-20 border-2 border-main-blue rounded-xl"
+          class="hidden lg:block lg:absolute inset-20 border-2 border-main-blue "
         >
         </div>
       </div>
