--- a/src/pages/en/about/our-story.astro
+++ b/src/pages/en/about/our-story.astro
@@ -47,10 +47,10 @@ const data = {
         <Image
           src={students}
           alt="Estudiante en iFly"
-          class="rounded-xl z-10 relative"
+          class=" z-10 relative"
         />
         <div
-          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
