--- a/src/pages/en/fleet/simulators.astro
+++ b/src/pages/en/fleet/simulators.astro
@@ -48,10 +48,10 @@ const data = {
         <Image
           src={cr12}
           alt="CR-12 Simulator"
-          class="rounded-xl z-10 relative h-96 object-cover w-[40rem]"
+          class=" z-10 relative h-96 object-cover w-[40rem]"
         />
         <div
-          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
@@ -82,10 +82,10 @@ const data = {
         <Image
           src={cat2}
           alt="PFC – CAT II Simulator"
-          class="rounded-xl z-10 relative w-[40rem] h-96 object-cover"
+          class=" z-10 relative w-[40rem] h-96 object-cover"
         />
         <div
-          class="absolute border-2 border-white translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-white translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
@@ -118,10 +118,10 @@ const data = {
         <Image
           src={a320}
           alt="A320 Synthetic Simulator"
-          class="rounded-xl z-10 relative w-[40rem] h-96 object-cover"
+          class=" z-10 relative w-[40rem] h-96 object-cover"
         />
         <div
-          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
@@ -153,10 +153,10 @@ const data = {
         <Image
           src={solo}
           alt="SOLO C-182RG Simulator"
-          class="rounded-xl z-10 relative w-[40rem] h-96 object-cover"
+          class=" z-10 relative w-[40rem] h-96 object-cover"
         />
         <div
-          class="absolute border-2 border-white translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-white translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
@@ -186,10 +186,10 @@ const data = {
         <Image
           src={xalpha}
           alt="X-ALPHA 200 Simulator"
-          class="rounded-xl z-10 relative w-[40rem] h-96 object-cover"
+          class=" z-10 relative w-[40rem] h-96 object-cover"
         />
         <div
-          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
