--- a/src/pages/en/why-become-a-pilot.astro
+++ b/src/pages/en/why-become-a-pilot.astro
@@ -32,10 +32,10 @@ const data = {
         <Image
           src={students}
           alt="Estudiante en iFly"
-          class="rounded-xl z-10 relative aspect-square object-cover"
+          class=" z-10 relative aspect-square object-cover"
         />
         <div
-          class="absolute border-2 border-main-blue -translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-main-blue -translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
@@ -99,7 +99,7 @@ const data = {
       class="max-w-xl lg:max-w-7xl mx-auto px-5 py-24 flex flex-col-reverse lg:flex-row lg:-space-x-20 -space-y-20 lg:space-y-0 items-center"
     >
       <div
-        class="flex-1 flex justify-center flex-col gap-5 text-center mx-5 sm:mx-10 lg:mx-0 bg-white shadow-md p-5 lg:p-14 rounded-xl z-10"
+        class="flex-1 flex justify-center flex-col gap-5 text-center mx-5 sm:mx-10 lg:mx-0 bg-white shadow-md p-5 lg:p-14  z-10"
       >
         <h2 class="uppercase text-main-black/80 tracking-widest">
           Words from our students
@@ -122,10 +122,10 @@ const data = {
         <Image
           src={studentInHangar}
           alt="Estudiante de piloto aviador"
-          class="rounded-xl relative lg:h-[34rem] object-cover"
+          class=" relative lg:h-[34rem] object-cover"
         />
         <div
-          class="size-80 border-2 border-main-blue rounded-xl absolute -bottom-12 -left-28 -z-10 hidden lg:block"
+          class="size-80 border-2 border-main-blue  absolute -bottom-12 -left-28 -z-10 hidden lg:block"
         >
         </div>
       </div>
