--- a/src/pages/flota/aviones/index.astro
+++ b/src/pages/flota/aviones/index.astro
@@ -8,7 +8,7 @@ const data = {
   siteTitle: "Nuestra Flota de Aviones - iFly Universidad Aeronáutica",
   siteDescription:
     "Descubre la flota de aviones de iFly para formación de pilotos. Volarás en aeronaves modernas y seguras, diseñadas para ofrecer la mejor experiencia educativa y operativa.",
-  headerImage: "/src/assets/flota.webp",
+  headerImage: "images/flota.webp",
   headerAlt: "Flota de iFly",
   title: "Nuestra Flota de Aviones",
 };
@@ -20,11 +20,11 @@ const data = {
   <section>
     <div class="max-w-7xl mx-auto px-5 py-24">
       <div class="max-w-4xl flex flex-col gap-5">
-        <h2 class="uppercase text-main-black/80 tracking-widest">
+        <h2 class="uppercase text-white/80 tracking-widest">
           La flota de iFly
         </h2>
         <h3 class="lg:text-5xl">Explora nuestra flota de aviones</h3>
-        <p class="text-main-black/70">
+        <p class="text-white/80">
           En iFly contamos con una flota de aviones moderna y segura, diseñada
           para ofrecer la mejor experiencia educativa y operativa a nuestros
           estudiantes. Nuestros aviones están equipados con la última tecnología
