--- a/src/components/ProgramForm.astro
+++ b/src/components/ProgramForm.astro
@@ -62,7 +62,7 @@ const data = Astro.currentLocale === "en" ? enData : esData;
       </div>
       <div class="lg:flex-1 relative">
         <form
-          class="flex flex-col max-w-4xl mx-auto gap-5 my-5 lg:my-0 bg-white p-10 rounded-xl shadow-md lg:absolute bottom-0 right-0"
+          class="flex flex-col max-w-4xl mx-auto gap-5 my-5 lg:my-0 bg-white p-10  shadow-md lg:absolute bottom-0 right-0"
           id="form"
         >
           <div class="flex flex-col lg:flex-row gap-5">
