--- a/src/pages/en/contacto.astro
+++ b/src/pages/en/contacto.astro
@@ -250,11 +250,11 @@ const formData = Astro.currentLocale === "en" ? enData : esData;
         <Image
           src={studentInHangar}
           alt="Estudiante en hangar de iFly"
-          class="rounded-xl z-10 relative lg:h-[34rem] object-cover"
+          class=" z-10 relative lg:h-[34rem] object-cover"
         />
       </div>
       <div
-        class="flex-1 flex justify-center flex-col gap-5 text-center mx-5 sm:mx-10 lg:mx-0 bg-white border-2 border-main-blue p-5 lg:p-14 rounded-xl z-10"
+        class="flex-1 flex justify-center flex-col gap-5 text-center mx-5 sm:mx-10 lg:mx-0 bg-white border-2 border-main-blue p-5 lg:p-14  z-10"
       >
         <h2 class="uppercase text-main-black/80 tracking-widest">
           Testimonial
