--- a/src/pages/flota/simuladores.astro
+++ b/src/pages/flota/simuladores.astro
@@ -13,7 +13,7 @@ const data = {
     "Simuladores de Vuelo - Entrenamiento Avanzado para Pilotos - iFly Universidad Aeronáutica",
   siteDescription:
     "Entrena en simuladores de vuelo de última generación en iFly. Obtén una formación realista y segura para desarrollar tus habilidades como piloto aviador en diferentes situaciones de vuelo.",
-  headerImage: "/src/assets/simulador-airbus-a320.jpg",
+  headerImage: "images/simulador-airbus-a320.webp",
   headerAlt: "Estudiantes de iFly recibiendo medalla",
   title: "Simuladores de Vuelo",
 };
@@ -27,17 +27,17 @@ const data = {
       class="max-w-xl lg:max-w-7xl mx-auto px-5 py-24 flex flex-col-reverse lg:flex-row gap-20 items-center"
     >
       <div class="flex-1 flex justify-center flex-col gap-5">
-        <h2 class="uppercase text-main-black/80 tracking-widest text-2xl">
+        <h2 class="uppercase text-white/80 tracking-widest text-2xl">
           Simulador CR-12
         </h2>
-        <p class="text-main-black/70">
+        <p class="text-white/70">
           Somos la única universidad del sureste con autorización ante la
           Agencia Federal de Aviación Civil para la certificación de tu examen
           de titulación ante el Centro Internacional de Adiestramiento de
           Aviación Civil y por la Federal Aviation Administration de Estados
           Unidos como un entrenador avanzado.
         </p>
-        <p class="text-main-black/70">
+        <p class="text-white/70">
           Puede ser operado como aeronave monomotor y multimotor en condiciones
           de vuelo visual o condiciones por instrumentos, el instructor podrá
           monitorear el progreso de la sesión y hacer una retroalimentación del
@@ -49,10 +49,10 @@ const data = {
         <Image
           src={cr12}
           alt="Simulador CR-12"
-          class="rounded-xl z-10 relative h-96 object-cover w-[40rem]"
+          class=" z-10 relative h-96 object-cover w-[40rem]"
         />
         <div
-          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
@@ -64,7 +64,7 @@ const data = {
       class="max-w-xl lg:max-w-7xl mx-auto px-5 py-24 flex flex-col-reverse lg:flex-row-reverse gap-20 items-center"
     >
       <div class="flex-1 flex justify-center flex-col gap-5">
-        <h2 class="uppercase tracking-widest text-2xl text-main-black/80">
+        <h2 class="uppercase tracking-widest text-2xl text-white/80">
           Simulador PFC – CAT II
         </h2>
         <p class="">
@@ -85,10 +85,10 @@ const data = {
         <Image
           src={cat2}
           alt="Simulador PFC – CAT II"
-          class="rounded-xl z-10 relative w-[40rem] h-96 object-cover"
+          class=" z-10 relative w-[40rem] h-96 object-cover"
         />
         <div
-          class="absolute border-2 border-white translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-white translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
@@ -100,17 +100,17 @@ const data = {
       class="max-w-xl lg:max-w-7xl mx-auto px-5 py-24 flex flex-col-reverse lg:flex-row gap-20 items-center"
     >
       <div class="flex-1 flex justify-center flex-col gap-5">
-        <h2 class="uppercase text-main-black/80 tracking-widest text-2xl">
+        <h2 class="uppercase text-white/80 tracking-widest text-2xl">
           SIMULADOR SINTÉTICO DE A320
         </h2>
-        <p class="text-main-black/70">
+        <p class="text-white/70">
           Es el mejor entrenador en su tipo ya que cuenta con un sistema visual
           tridimensional para que los pilotos puedan tener un ambiente sumamente
           real durante su adiestramiento, además permite entender de manera
           concisa el vuelo automatizado, la cabina de cristal y la simulación
           exacta de los sistemas del A320 en ambas posiciones.
         </p>
-        <p class="text-main-black/70">
+        <p class="text-white/70">
           Además contamos con cursos introductorios al simulador A320 que se
           pueden tomar en parejas, al final de tu curso como Pro Pilot podrás
           vivir la experiencia de volar un avión comercial.
@@ -121,10 +121,10 @@ const data = {
         <Image
           src={a320}
           alt="Simulador Sintético De A320"
-          class="rounded-xl z-10 relative w-[40rem] h-96 object-cover"
+          class=" z-10 relative w-[40rem] h-96 object-cover"
         />
         <div
-          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
@@ -136,7 +136,7 @@ const data = {
       class="max-w-xl lg:max-w-7xl mx-auto px-5 py-24 flex flex-col-reverse lg:flex-row-reverse gap-20 items-center"
     >
       <div class="flex-1 flex justify-center flex-col gap-5">
-        <h2 class="uppercase tracking-widest text-2xl text-main-black/80">
+        <h2 class="uppercase tracking-widest text-2xl text-white/80">
           Simulador SOLO C-182RG
         </h2>
         <p class="">
@@ -156,10 +156,10 @@ const data = {
         <Image
           src={solo}
           alt="Simulador SOLO C-182RG"
-          class="rounded-xl z-10 relative w-[40rem] h-96 object-cover"
+          class=" z-10 relative w-[40rem] h-96 object-cover"
         />
         <div
-          class="absolute border-2 border-white translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-white translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
@@ -171,15 +171,15 @@ const data = {
       class="max-w-xl lg:max-w-7xl mx-auto px-5 py-24 flex flex-col-reverse lg:flex-row gap-20 items-center"
     >
       <div class="flex-1 flex justify-center flex-col gap-5">
-        <h2 class="uppercase text-main-black/80 tracking-widest text-2xl">
+        <h2 class="uppercase text-white/80 tracking-widest text-2xl">
           SIMULADOR X-ALPHA 200
         </h2>
-        <p class="text-main-black/70">
+        <p class="text-white/70">
           El X-ALPHA es nuestro simulador de vuelo que funciona con lentes de
           realidad virtual, que te permitirán tener una experiencia más
           inmersiva en tu adiestramiento, fabricado en Eslovenia.
         </p>
-        <p class="text-main-black/70">
+        <p class="text-white/70">
           Este simulador te preparará para poder volar de manera segura y
           profesional cada uno de nuestros Pipistrel Virus SW 121.
         </p>
@@ -189,10 +189,10 @@ const data = {
         <Image
           src={xalpha}
           alt="Simulador X-ALPHA 200"
-          class="rounded-xl z-10 relative w-[40rem] h-96 object-cover"
+          class=" z-10 relative w-[40rem] h-96 object-cover"
         />
         <div
-          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
