--- a/src/pages/nosotros/campus.astro
+++ b/src/pages/nosotros/campus.astro
@@ -14,7 +14,7 @@ const data = {
     "Campus iFly - Instalaciones de Vanguardia para tu Formación en Aviación",
   siteDescription:
     "Conoce el campus de iFly, diseñado para ofrecer un ambiente óptimo de aprendizaje. Disfruta de aulas equipadas, simuladores de vuelo y áreas de práctica en un entorno moderno.",
-  headerImage: "/src/assets/personal-de-ifly-dando-la-bienvenida.webp",
+  headerImage: "images/personal-de-ifly-dando-la-bienvenida.webp",
   headerAlt: "Personal de iFly dando la bienvenida",
   title: "Conoce Nuestro Campus",
 };
@@ -28,9 +28,9 @@ const data = {
       class="max-w-xl lg:max-w-7xl mx-auto px-5 py-24 flex flex-col-reverse lg:flex-row gap-20 items-center"
     >
       <div class="flex-1 flex justify-center flex-col gap-5">
-        <h2 class="uppercase text-main-black/80 tracking-widest">Campus</h2>
+        <h2 class="uppercase text-white/80 tracking-widest">Campus</h2>
         <h3 class="text-4xl lg:text-5xl">Nuestras instalaciones</h3>
-        <p class="text-main-black/70">
+        <p class="text-white/70">
           iFly Universidad Aeronáutica cuenta con instalaciones de última
           generación dentro de las cuales los estudiantes podrán tomar su teoría
           y su adiestramiento en simulador, de igual manera, contamos con tres
@@ -43,10 +43,10 @@ const data = {
         <Image
           src={students}
           alt="Estudiante en iFly"
-          class="rounded-xl z-10 relative"
+          class=" z-10 relative"
         />
         <div
-          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5 rounded-xl inset-0"
+          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5  inset-0"
         >
         </div>
       </div>
@@ -67,35 +67,35 @@ const data = {
     </div>
   </section>
 
-  <section class="pb-60 bg-main-black/5">
+  <section class="pb-60 bg-main-black/5 mb-60">
     <div class="max-w-7xl mx-auto px-5 py-24 flex flex-col lg:flex-row gap-20">
       <div class="flex-1 relative">
         <Image
           src={tecnico1}
           alt="Estudiante en iFly"
-          class="rounded-xl z-10 lg:absolute max-h-72 lg:max-h-none lg:w-80 aspect-square object-cover top-0 left-0"
+          class=" z-10 lg:absolute max-h-72 lg:max-h-none lg:w-80 aspect-square object-cover top-0 left-0"
         />
         <Image
           src={tecnico2}
           alt="Estudiante en iFly"
-          class="rounded-xl mt-10 lg:mt-0 z-10 lg:absolute max-h-72 lg:max-h-none lg:w-80 aspect-square object-cover bottom-0 right-0"
+          class=" mt-10 lg:mt-0 z-10 lg:absolute max-h-72 lg:max-h-none lg:w-80 aspect-square object-cover bottom-0 right-0"
         />
         <div
-          class="hidden lg:block lg:absolute inset-20 border-2 border-main-blue rounded-xl"
+          class="hidden lg:block lg:absolute inset-20 border-2 border-main-blue "
         >
         </div>
       </div>
       <div class="flex-1 flex justify-center flex-col gap-5">
-        <h2 class="uppercase text-main-black/80 tracking-widest">
+        <h2 class="uppercase text-white/80 tracking-widest">
           Taller de mantenimiento
         </h2>
         <h3 class="text-4xl lg:text-5xl">Nuestro taller de mantenimiento</h3>
-        <p class="text-main-black/70">
+        <p class="text-white/70">
           Para la seguridad de nuestros estudiantes e instructores que día a día
           realizan sus prácticas de vuelo, contamos con un espacio que realiza
           el mantenimiento e inspecciones a las naves.
         </p>
-        <p class="text-main-black/70">
+        <p class="text-white/70">
           El taller da servicios de mantenimiento de 50, 100, 200, 1000 horas a
           las aeronaves con apego a las normas establecidas por la autoridad
           aeronáutica así como a los procedimientos establecidos por la empresa,
