fix image paths

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -11,7 +11,7 @@ const posts = (await getCollection("blog")).sort(
 
 const headerData = {
   title: "Blog de iFly",
-  headerImage: "/src/assets/avion-cessna-172.webp",
+  headerImage: "blog/avion-cessna-172.webp",
   headerAlt: "Cessna 172 en iFly",
 };
 ---
