--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Testimonials from "../components/Testimonials.astro";
 import CTAImage from "../components/CTAImage.astro";
 import IndexForm from "../components/IndexForm.astro";
 
-const imageURL = "./images/ifly-welcome.webp";
+const imageURL = "images/ifly-welcome.webp";
 
 ---
 
