--- a/src/pages/por-que-ser-piloto.astro
+++ b/src/pages/por-que-ser-piloto.astro
@@ -20,6 +20,30 @@ const data = {
   headerAlt: "Pilotos aviadores en frente de la universidad de iFly",
   title: "¿Por qué convertirte en piloto?",
 };
+import LogoWhiteNoText from "../assets/ifly-logo-white-no-text.png";
+
+const esData = {
+  h2text: "¿Qué dicen nuestros estudiantes?",
+  h3text: "Conoce la experiencia de nuestros estudiantes",
+  quoteText: `"Formarme como piloto en iFly fue una de las mejores decisiones que he
+          tomado en mi vida y una gran experiencia. Si me preguntaran de nuevo
+          la elegiría sin pensarlo, ya que me permitió sentar bases sólidas en
+          mi formación como piloto desde el punto de vista académico y
+          personal."`,
+  citeText: `- Eduardo Lugán Aldaz (Piloto aviador)`
+};
+
+const enData = {
+  h2text: "Testimonials",
+  h3text: "Discover the experiences of our students",
+  quoteText: `"iFly is the family that saw me grow as a professional aviator pilot and
+          helped me fulfill one of my greatest dreams. It is a pleasure
+          and an honor for me to have been trained in this great family."`,
+  citeText: `- Roberto Novelo Cicero (Aviator Pilot)`
+};
+
+const tesdata = Astro.currentLocale === "en" ? enData : esData;
+
 ---
 
 <BaseLayout siteTitle={data.siteTitle} siteDescription={data.siteDescription}>
@@ -99,26 +123,36 @@ const data = {
     <div
       class="max-w-xl lg:max-w-7xl mx-auto px-5 py-24 flex flex-col-reverse lg:flex-row lg:-space-x-20 -space-y-20 lg:space-y-0 items-center"
     >
-      <div
-        class="flex-1 flex justify-center flex-col gap-5 text-center mx-5 sm:mx-10 lg:mx-0 bg-white shadow-md p-5 lg:p-14  z-10"
+    <div
+      class="max-w-[80vw] lg:max-w-[60vw] flex-1 flex flex-col gap-5 justify-center items-center content-center text-center mx-5 sm:mx-10 lg:mx-0 bg-sec-blue border-2 p-5 lg:p-14 z-10 relative overflow-hidden my-24"
+    >
+      <Image
+        src={LogoWhiteNoText}
+        alt="iFly logo in white"
+        class="w-44 absolute -left-11 -top-3 -z-50 filter-opacity-20"
+      />
+
+      <h2 class="uppercase font-bold text-main-blue text-xl lg:text-3xl tracking-tight"
+          set:html={tesdata.h2text}
       >
-        <h2 class="uppercase text-main-black/80 tracking-widest">
-          Palabras de nuestros estudiantes
-        </h2>
-        <h3 class="text-lg sm:text-3xl text-main-black/90 lg:text-5xl">
-          ¿Qué dicen nuestros estudiantes?
-        </h3>
-        <quote class="text-main-black/70">
-          "Formarme como piloto en iFly fue una de las mejores decisiones que he
-          tomado en mi vida y una gran experiencia. Si me preguntaran de nuevo
-          la elegiría sin pensarlo, ya que me permitió sentar bases sólidas en
-          mi formación como piloto desde el punto de vista académico y
-          personal."
-        </quote>
-        <cite class="text-main-black/90"
-          >- Eduardo Lugán Aldaz (Piloto aviador)</cite
+        
+      </h2>
+      <h3 class="lg:text-xl text-main-blue border-fade-light pb-2"
+          set:html={tesdata.h3text}
+      >
+      </h3>
+      <quote class="max-w-[60%] text-left flex flex-col"
+      >
+        {tesdata.quoteText}
+        <br/>
+        <cite class="text-right font-semibold"
+        set:html={tesdata.citeText}
         >
-      </div>
+        </cite>
+      </quote>
+
+    </div>
+
       <div class="flex-1 translate-y-20 lg:translate-y-0 relative">
         <Image
           src={studentInHangar}
