--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,10 @@ h1 {
   font-family: 'Rokkitt Variable', serif;
 }
 
+li {
+  font-family: 'Inter Variable', sans-serif;
+}
+
 .navbar-scroll {
   position: fixed;
   top: 0;
@@ -36,6 +40,11 @@ h1 {
   transform: translateX(-50%);
   z-index: 50;
   background: transparent;
+}
+
+.bg-stripes {
+  background-image:linear-gradient(to right, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 100%) , url(images/bg-stripes.png);
+  background-position: 50% 45%;
 }
 
 .border-fade {
