--- a/src/components/HomepageHeader.astro
+++ b/src/components/HomepageHeader.astro
@@ -28,7 +28,7 @@ const lang = Astro.currentLocale === "en" ? "en" : "es";
 >
     <Image
     src={HeroImage}
-    alt="Estudiante en iFly"
+    alt="Pilotos en iFly"
     class="absolute top-0 w-full h-full object-cover -z-50"
     quality={100}
     />
@@ -41,14 +41,14 @@ const lang = Astro.currentLocale === "en" ? "en" : "es";
     <Image
     src={Logo}
     alt="Estudiante en iFly"
-    class="absolute top-[10%] w-full h-[22%] object-scale-down -z-20"
+    class="absolute top-[30%] w-full h-[22%] object-scale-down -z-20"
     quality={100}
     />
 
     <div class="absolute top-0 w-full h-full object-cover -z-30 bg-gradient-to-b from-black to-transparent"/>
 
-  <div class="flex-col w-full max-w-7xl mx-auto px-5">
-    <div class="flex flex-col items-center gap-4 lg:gap-8 sm:translate-y-20">
+  <div class="flex-col w-full max-w-7xl mx-auto px-5 h-full">
+    <div class="flex flex-col items-center gap-4 lg:gap-8 sm:translate-y-20 h-4/5 justify-end">
       <h1
         class="text-2xl max-w-2xl text-center font-semibold lg:text-5xl lg:max-w-4xl"
         set:html={data.title}
