--- a/src/components/PlaneClouds.astro
+++ b/src/components/PlaneClouds.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import Clouds from "../assets/clouds-from-above.jpg";
+import Clouds from "../assets/clouds-from-above.png";
 import Plane from "../assets/ifly-plane-no-bg.png";
 const esData = {
   text: "Convierte tu amor por volar<br/>en una carrera profesional"
