--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -79,7 +79,8 @@ li {
 }
 
 .custom-bg-gradient {
-  background: linear-gradient(to bottom, black 0%, rgba(50, 50, 255, 0.25) 50%, black 100%);
+  background: linear-gradient(to bottom, black 20%, rgba(0, 27, 74, 0.605) 60%, black 100%),
+              linear-gradient(to right, black 0%, transparent 50%, black 100%);;
 }
 
 .custom-bg-gradient-b {
