--- a/src/components/Counters.astro
+++ b/src/components/Counters.astro
@@ -2,17 +2,18 @@
 import { Image } from "astro:assets";
 import BgTextureUp from "../assets/bg-texture-up.jpg";
 import StudentsHangar from "../assets/estudiantes-frente-a-hangares-de-ifly.webp";
+import Airplane from "../assets/ifly-tecnam.png"
 import CounterCard from "../components/CounterCard";
 import esStats from "../data/stats";
 import enStats from "../data/en/stats";
 
 const esData = {
-  imgAlt1: "Estudiantes de iFly posando frente al hangar",
+  imgAlt1: "El avión tecnam de iFly sobrevolando las nubes",
   imgAlt2: "Textura utilizada para el fondo"
 };
 
 const enData = {
-  imgAlt1: "iFly students posing in front of hangar",
+  imgAlt1: "iFly's tecnam plane flying over clouds",
   imgAlt2: "Texture used for background"
 };
 
@@ -24,9 +25,9 @@ const stats = Astro.currentLocale === "en" ? enStats : esStats;
 <section class="bg-main-black/5 relative pb-[30vh] custom-bg-gradient-t">
   <div class="overflow-hidden h-[60vh] relative">
     <Image
-        src={StudentsHangar}
+        src={Airplane}
         alt={data.imgAlt1}
-        class="absolute inset-0 object-cover object-center w-full h-full border-blue-y"
+        class="absolute inset-0 object-cover object-center h-full border-blue-y"
     />
   </div>
   <Image
