--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const imageURL = "images/ifly-welcome.webp";
   <PlaneClouds />
   <Welcome />
   <Counters />
-  <Carreers slice={true} />
+  <Carreers />
   <Testimonials />
   <CTAImage imgURL={imageURL}/>
   <IndexForm />
