--- a/src/components/Carreers.astro
+++ b/src/components/Carreers.astro
@@ -2,7 +2,6 @@
 import enPrograms from "../data/en/programs";
 import esPrograms from "../data/programs";
 import ProgramCard from "../components/ProgramCard.astro";
-const { slice } = Astro.props;
 
 const esData = {
   h2text: "Nuestras Carreras",
@@ -30,9 +29,6 @@ const enData = {
 
 const data = Astro.currentLocale === "en" ? enData : esData;
 const programs = Astro.currentLocale === "en" ? enPrograms : esPrograms;
-const programsSlice = slice ? programs.slice(0, 3) : programs;
-
-
 ---
 
 <section class="text-white relative z-20">
@@ -54,9 +50,9 @@ const programsSlice = slice ? programs.slice(0, 3) : programs;
       </p>
     </div>
 
-    <div class="flex-col gap-10">
+    <div id="sliced-programs" class="flex-col gap-10">
       {
-        programsSlice
+        programs.slice(0, 3)
           .map((program) => (
             <ProgramCard
               title={program.data.title}
@@ -68,10 +64,55 @@ const programsSlice = slice ? programs.slice(0, 3) : programs;
           ))
       }
     </div>
-    <a
+    <div id="full-programs" class="flex-col gap-10">
+      {
+        programs
+          .map((program) => (
+            <ProgramCard
+              title={program.data.title}
+              subTitle={program.data.subTitle}
+              description={program.data.description}
+              imagePath={program.data.primaryImage}
+              url={program.data.url}
+            />
+          ))
+      }
+    </div>
+    <!-- <a
       href={data.linkRef}
       class="btn-primary w-full max-w-lg"
       set:html={data.linkText}
-    ></a>
+    ></a> -->
+    <button id="slice-button" class="btn-primary w-full max-w-lg">
+      Mostrar Todos
+    </button>
   </div>
 </section>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const sectionSliced = document.getElementById("sliced-programs");
+    const sectionFull = document.getElementById("full-programs");
+    const toggleBtn = document.getElementById("slice-button");
+
+    if (toggleBtn && sectionSliced && sectionFull) {
+      toggleBtn.addEventListener("click", () => {
+        const isVisible = sectionFull.classList.contains("visible");
+
+        if (!isVisible) {
+          sectionFull.classList.add("visible");
+          sectionSliced.classList.add("hidden");
+
+          toggleBtn.textContent = "Mostrar Menos";
+
+          // Scroll to the full programs section after it becomes visible
+          sectionFull.scrollIntoView({ behavior: "smooth", block: "start" });
+        } else {
+          sectionFull.classList.remove("visible");
+          sectionSliced.classList.remove("hidden");
+
+          toggleBtn.textContent = "Mostrar Todos";
+        }
+      });
+    }
+  });
+</script>
