--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,8 @@ import Carreers from "../components/Carreers.astro";
 import Testimonials from "../components/Testimonials.astro";
 import CTAImage from "../components/CTAImage.astro";
 import IndexForm from "../components/IndexForm.astro";
+import TestimonialsSwiper from "../components/TestimonialsSwiper.astro";
+import testimonialsSwiper from "../data/testimonialsSwiper";
 
 const imageURL = "images/ifly-welcome.webp";
 
@@ -23,6 +25,8 @@ const imageURL = "images/ifly-welcome.webp";
   <Counters />
   <Carreers />
   <Testimonials />
+  <!-- <TestimonialsSwiper content={testimonialsSwiper} /> -->
   <CTAImage imgURL={imageURL}/>
   <IndexForm />
+  <!-- <script src="../scripts/creativeSwiper.js"></script> -->
 </BaseLayout>
