--- a/src/components/Counters.astro
+++ b/src/components/Counters.astro
@@ -27,7 +27,7 @@ const stats = Astro.currentLocale === "en" ? enStats : esStats;
     <Image
         src={Airplane}
         alt={data.imgAlt1}
-        class="absolute inset-0 object-cover object-center h-full border-blue-y"
+        class="absolute inset-0 object-cover object-center h-full w-full border-blue-y"
     />
   </div>
   <Image
