--- a/src/components/TestimonialsCard.astro
+++ b/src/components/TestimonialsCard.astro
@@ -3,12 +3,11 @@ import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 
 const {
-  title,
-  imagePath,
+  quoteText,
+  citeText,
   imageAlt,
-  link,
-  linkText = "Explore",
   description,
+  imagePath
 } = Astro.props;
 const images = import.meta.glob<{ default: ImageMetadata }>(
   "/src/assets/*.{jpeg,jpg,png,gif,webp}"
@@ -19,9 +18,42 @@ if (!images[imagePath])
   );
 ---
 
-<div class="flex flex-col bg-white group relative overflow-hidden rounded-sm">
+<div class="flex-1 flex flex-col gap-2 justify-center items-center content-center text-center h-[70vh] lg:h-[60vh] ">
+  <!-- <h2 class="uppercase font-bold text-main-blue text-xl lg:text-3xl tracking-tight mt-5"
+    set:html={quoteText}
+  >
+      
+  </h2>
+  <h3 class="lg:text-xl text-main-blue border-fade-light pb-1 mb-5"
+    set:html={citeText}
+  >
+  </h3> -->
   <div
-    class="w-full h-[27rem] overflow-hidden flex flex-col justify-center items-center align-middle"
+    class="max-w-[80vw] lg:max-w-[60vw] flex-1 flex flex-col gap-5 justify-center items-center content-center text-center bg-sec-blue z-10 relative overflow-hidden hover:scale-105 transition-all duration-300"
+  >
+    <Image
+      src={images[imagePath]()}
+      alt={imageAlt}
+      class="absolute -left-11 -top-3 -z-50 filter-opacity-20"
+    />
+
+    <quote class="max-w-[90%] text-left flex flex-col text-lg font-extralight"
+    >
+      {quoteText}
+      <br/>
+      <br/>
+      <cite class="text-right font-semibold text-lg"
+      set:html={citeText}
+      >
+      </cite>
+    </quote>
+
+  </div>
+</div>
+
+<!-- <div class="flex flex-col bg-sec-blue group relative overflow-hidden rounded-sm">
+  <div
+    class="w-full h-[33rem] overflow-hidden flex flex-col justify-center items-center align-middle"
   >
     <p
       class="z-10 w-full px-6 text-3xl font-bebas lg:translate-y-12 drop-shadow-md text-center leading-7 text-accent-200 lg:text-accent-100 group-hover:text-accent-200 group-hover:-translate-y-3 duration-300 ease-in-out"
@@ -38,7 +70,7 @@ if (!images[imagePath])
     <Image
       src={images[imagePath]()}
       alt={imageAlt}
-      class="absolute -z-0 h-full w-full object-cover object-top group-hover:blur-sm group-hover:-translate-y-3 group-hover:scale-105 duration-100 ease-out"
+      class="w-44 absolute -left-11 -top-3 -z-50 filter-opacity-20"
       quality={60}
     />
     <div
@@ -59,4 +91,4 @@ if (!images[imagePath])
       </p>
     </div>
   </a>
-</div>
+</div> -->
