--- a/src/components/CTAImage.astro
+++ b/src/components/CTAImage.astro
@@ -1,6 +1,6 @@
 ---
 const esData = {
-  title: "Toma el <br> primero paso...",
+  title: "Toma el control de tu futuro...",
   firstParagraph:
     "Empieza a estudiar hoy en iFly Universidad Aeronáutica<br> y toma el primer paso en tu carrera.",
 };
@@ -16,14 +16,14 @@ const { imgURL } = Astro.props;
 const data = Astro.currentLocale === "en" ? enData : esData;
 ---
 
-<section  class="relative top-0 bg-local bg-top bg-cover h-[120vh] flex flex-col justify-center items-center content-center gap-20" 
-style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.7) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(${imgURL})`
+<section  class="relative top-0 bg-local bg-top bg-cover h-[120vh] flex flex-col justify-end items-center content-center gap-10 pb-20" 
+style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.7) 20%, rgba(0, 0, 0, 0.7) 80%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(${imgURL})`
 >
-  <h2 class="font-extrabold text-4xl lg:text-8xl text-white/90 tracking-tight"
+  <h2 class="font-serif text-3xl lg:text-6xl text-white/90 tracking-normal"
       set:html={data.title}
   >
   </h2>
-  <p class="text-xl lg:text-2xl max-w-[90vw] text-white/80"
+  <p class="text-2xl lg:text-3xl max-w-[90vw] text-white/80"
       set:html={data.firstParagraph}
   >
   </p>
