--- a/src/components/IndexForm.astro
+++ b/src/components/IndexForm.astro
@@ -42,8 +42,8 @@ const data = Astro.currentLocale === "en" ? enData : esData;
 const lang = Astro.currentLocale === "en" ? "en" : "es";
 ---
 
-<section class="py-24 px-5 scroll-my-24 relative -mb-[30rem]" id="sign-up-form">
-  <div class="max-w-xl lg:max-w-6xl mx-auto text-white border-blue py-28 relative -top-[36rem]">
+<section class="px-5 scroll-my-24 relative" id="sign-up-form">
+  <div class="max-w-xl lg:max-w-6xl mx-auto text-white border-blue py-28 relative">
     <div class="flex-1 flex flex-col gap-5 justify-center items-center content-center text-center">
       <div class="lg:flex-1 relative lg:w-[70%]">
         <p class="text-2xl text-white/80 py-12">
