--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,6 +13,9 @@
     background-image:linear-gradient(to right, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 100%) , url(../../public/images/bg-stripes.png);
     background-position: 50% 45%;
   }  
+  .bg-stripes-blue {
+    background-image:linear-gradient(to right, rgba(0, 76, 190, 0.3) 0%, rgba(0, 76, 190, 0.3) 100%) , url(../../public/images/bg-stripes.png);
+  }  
 }
 
 body {
