--- a/src/components/ProgramCard.astro
+++ b/src/components/ProgramCard.astro
@@ -27,7 +27,7 @@ if (!images[imagePath]) {
 
 <div class="max-w-[80vw] flex flex-row flex-wrap overflow-hidden text-white">
   <div
-    class="flex flex-col py-8 gap-3 justify-between h-full lg:w-[40vw] lg:h-[40vh] bg-main-accent px-8"
+    class="flex flex-col py-8 gap-3 justify-between h-full lg:w-[40vw] lg:h-[40vh] px-8 bg-stripes-blue bg-bottom bg-opacity-15"
   >
     <div class="flex flex-col gap-3">
       <h3 class="word-clamp text-2xl lg:text-3xl font-semibold leading-tight">
