--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -155,7 +155,7 @@ const navbarLinks =
           </li>
         </ul>
 
-        <ul class="flex gap-5 mt-5 text-gray-400">
+        <!-- <ul class="flex gap-5 mt-5 text-gray-400">
           <li>
             <a
               href="/"
@@ -170,7 +170,7 @@ const navbarLinks =
               >English</a
             >
           </li>
-        </ul>
+        </ul> -->
       </div>
 
       <div class="flex flex-col gap-3">
