--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,6 +11,7 @@ import {
   INSTAGRAM_URL,
   WHATSAPP_URL,
   SITE_TITLE,
+  WHATSAPP
 } from "../consts";
 import { Image } from "astro:assets";
 import whiteLogo from "../assets/ifly-logo-blanco.png";
@@ -137,7 +138,7 @@ const navbarLinks =
             />
             <a
               class="group-hover:text-main-blue duration-200"
-              href={WHATSAPP_URL}>(999) 286-9385</a
+              href={WHATSAPP_URL}>{WHATSAPP}</a
             >
           </li>
           <li class="flex gap-2 group max-w-sm">
