--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,20 +25,20 @@ const { data } = Astro.props;
   <div class="absolute inset-0 bg-main-black/60 -z-40"></div> -->
 
   <div
-    class="flex w-[50vw] lg:w-[30vw] max-w-7xl lg:ml-28 px-5 font-medium flex-col"
+    class="flex w-[60vw] max-w-7xl lg:ml-28 px-5 font-medium flex-col"
   >
     <h1
       class="text-4xl md:text-6xl lg:text-8xl tracking-wider max-w-xl font-extrabold lg:max-w-4xl"
     >
       {data.title}
     </h1>
-    <p class="text-5xl">
+    <p class="text-5xl font-sans tracking-widest">
       ::::::::
     </p>
-    <h2 class="text-2xl md:text-4xl lg:text-6xl">
-      {data.subTitle}
+    <h2 class="text-xl md:text-2xl lg:text-4xl font-semibold uppercase py-5">
+      {data.subTitleFull}
     </h2>
-    <p class="text-md md:text-lg lg:text-xl">
+    <p class="text-md md:text-lg lg:text-xl w-[60%]">
       {data.description}
     </p>
     
