--- a/src/components/TestimonialsBanner.astro
+++ b/src/components/TestimonialsBanner.astro
@@ -3,10 +3,10 @@ import { Image } from "astro:assets";
 import TestimonialsBG from "../assets/ifly-admin-crew.webp";
 ---
 
-<section class="flex flex-col items-center relative top-0 custom-bg-gradient-xy min-h-[80vh] lg:min-h-[60vw]">
+<section class="flex flex-col items-center relative top-0 custom-bg-gradient-xy h-[100vh]">
   <Image
     src={TestimonialsBG}
     alt="Estudiante en hangar de iFly"
-    class="object-cover object-center h-full w-full"
+    class="object-cover h-full w-full"
   /> 
 </section>
