--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,9 @@
   .btn-primary {
     @apply block text-center font-bold py-2 px-10 bg-main-blue w-fit border-blue text-white duration-300 hover:bg-main-blue/80;
   }
+  .btn-primary-white {
+    @apply block text-center font-bold py-2 px-10 bg-white w-fit border-blue text-[rgba(16,79,132,255)] duration-300 hover:bg-main-blue/80 hover:text-white;
+  }
   .btn-secondary {
     @apply block text-center font-bold py-2 px-10 bg-transparent w-fit border-blue text-white duration-300 hover:bg-white/30;
   }
@@ -134,7 +137,7 @@ li {
 }
 
 .filter-opacity-20 {
-  filter: opacity(0.20);
+  filter: opacity(0.15);
 }
 
 .border-bottom-blue {
