--- a/src/layouts/CourseLayout.astro
+++ b/src/layouts/CourseLayout.astro
@@ -74,8 +74,8 @@ const info = esData;
         />
 
         <div class="flex flex-col w-11/12  mx-auto mt-32 mb-7 gap-4">
-          <div class="flex flex-row gap-5">
-            <div class="flex-col w-1/2 gap-5">
+          <div class="flex flex-row gap-5 justify-around flex-wrap">
+            <div class="flex-col w-10/12 lg:w-2/5 gap-5">
               <h3
                 class="text-center text-2xl lg:text-4xl font-semibold"
                 set:html={info.sidebarTitle}
@@ -85,7 +85,7 @@ const info = esData;
               >
               </p>    
             </div>
-            <div class="flex-col w-1/2">
+            <div class="flex-col w-10/12 lg:w-1/2">
               <h3
                 class="text-center text-2xl lg:text-4xl font-semibold"
                 set:html={info.sidebarTitle2}
@@ -94,7 +94,7 @@ const info = esData;
               <ul>
                 {
                   data.prerequisites.map((step) => (
-                    <li class="flex relative gap-2 w-8/12 mx-auto text-lg">
+                    <li class="flex relative gap-2 w-full lg:w-8/12 mx-auto text-lg">
                       <FaDotCircle className="text-main-blue size-3 shrink-0 relative top-2" />
                       <div set:html={step} />
                     </li>
