update cadet-pilot page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,10 +20,13 @@
     background-image:linear-gradient(to right, rgba(0, 76, 190, 0.3) 0%, rgba(0, 76, 190, 0.3) 100%) , url(../../public/images/bg-stripes.png);
   }  
   .aviation-management-banner {
-    background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(../assets/ifly-aviation-management-banner.webp);
+    background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/ifly-aviation-management-banner.webp);
   }  
   .pro-pilot-banner {
-    background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(../assets/pro-pilot-banner.webp);
+    background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/pro-pilot-banner.webp);
+  }  
+  .cadet-pilot-banner {
+    background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/cadet-pilot-banner.webp);
   }  
 }
 
