--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,6 +28,9 @@
   .cadet-pilot-banner {
     background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/cadet-pilot-banner.webp);
   }  
+  .sobrecargo-de-aviacion-banner {
+    background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/sobrecargo-de-aviacion-banner.webp);
+  }  
 }
 
 body {
