--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,6 +34,9 @@
   .aircraft-dispatcher-banner {
     background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/aircraft-dispatcher-banner.webp);
   }  
+  .aircraft-maintenance-banner {
+    background-image:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 40%, transparent 90%, black 100%), url(../assets/aircraft-maintenance-banner.webp);
+  }  
 }
 
 body {
